tests/libflow-typed/libflow-typed.exp
Error ---------------------------------------------------------- libtest.js:2:25

Error: libtest.js:2
  2: const dino : Dinosaur = "Stegosaurus"
                             ^^^^^^^^^^^^^ Cannot assign `"Stegosaurus"` to `dino` because string [1] is incompatible with string enum [2].
  References:
    2: const dino : Dinosaur = "Stegosaurus"
                               ^^^^^^^^^^^^^ [1]: string
    2: const dino : Dinosaur = "Stegosaurus"
                    ^^^^^^^^ [2]: string enum


Found 1 error
